# estimate_maximum_likelihood

./: .gitignore  README.md  example.py  pyproject.toml
.claude/: settings.local.json
emery/: __init__.py  binary.py  classes.py  continuous.py  core.py  ordinal.py  utils.py
tests/: test_binary.py  test_continuous.py  test_ordinal.py
